# jobseekers

./: .gitignore  .replit  Pasted-During-handling-of-the-above-exception-another-exception-occurred-Traceback-most-recent-call-las-1733959505194.txt  Pasted-ERROR-app-Exception-on-auth-saml-login-GET-Traceback-most-recent-call-last-File-home-runne-1734055757238.txt  Pasted-ERROR-app-Exception-on-employer-dashboard-GET-Traceback-most-recent-call-last-File-home-ru-1734051170039.txt  Pasted-ERROR-app-Exception-on-employer-jobs-GET-Traceback-most-recent-call-last-File-home-runner--1734050514378.txt  Pasted-ERROR-app-Exception-on-employer-jobs-new-POST-Traceback-most-recent-call-last-File-home-ru-1734054023272.txt  Pasted-ERROR-bot-telegram-bot-Error-in-Telegram-bot-Cannot-close-a-running-event-loop-WARNING-bot-telegram-1733958306245.txt  Pasted-ERROR-telegram-ext-Updater-Error-while-calling-get-updates-one-more-time-to-mark-all-fetched-updat-1734103677675.txt  Pasted-ERROR-telegram-ext-Updater-Error-while-getting-Updates-Conflict-terminated-by-other-getUpdates-req-1734099398751.txt  Pasted-Error-An-unexpected-error-occurred-spoofer-js-1-38935-The-resource-from-https-cdn-jsdelivr-net-n-1734192966275.txt  Pasted-Error-Certificate-generation-failed-Saving-debug-log-to-home-letsencrypt-logs-letsencrypt-log-Plu-1734300792306.txt  Pasted-This-typically-means-that-you-attempted-to-use-functionality-that-needed-the-current-application-To-1734047669887.txt  Pasted-import-asyncio-import-logging-import-os-import-signal-from-app-import-create-app-db-Added-db-imp-1734391316483.txt  README.md  app.py  config.py  errors.py  extensions.py  init_db.py  main.py  manage.py  middleware.py  migrations.py  models.py  pdf-error.txt  poetry.lock.old  pyproject.toml  replit.nix  replit_zip_error_log.txt  requirements.txt  runner.py
.cache/nix/: binary-cache-v6.sqlite
.upm/: store.json
app/bot/: __init__.py
app/services/: ssl_service.py
auth/: routes.py
bot/: __init__.py  __main__.py  decorators.py  handlers.py  middleware.py  telegram_bot.py
bot/commands/: base_command.py  help_command.py  jobs_command.py  register_command.py  start_command.py
bot/services/: database_service.py
config/: __init__.py  auth.py  saml.py
core/: app_factory.py  application_manager.py  bot_factory.py  db_utils.py  error_handlers.py  security.py  service_interface.py  service_manager.py  service_registry.py
instance/: jobseekr.db  jobseekr.db.old
migrations/: alembic.ini  env.py
migrations/versions/: 82718b7aba01_.py  (+6 more)
models/: __init__.py  application.py  base.py  employer.py  job.py  job_seeker.py  message.py
pear-landing-page/: package-lock.json  package.json
routes/: __init__.py  admin_routes.py  auth_routes.py  employer_routes.py  job_routes.py  sso_routes.py
secops/: sec.py
services/: ai_health_service.py  ai_service.py  auth0_service.py  base.py  base_service.py  bot_service.py  cv_matcher.py  domain_service.py  email_service.py  file_service.py  geo_service.py  logging_service.py  monitoring_service.py  ssl_service.py
templates/: base.html
(+68 files in other folders)
