[project]
name = "repl-nix-jobseekrbot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "openai>=1.57.2",
    "sqlalchemy>=2.0.36",
    "flask-wtf>=1.2.2",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "geopy>=2.4.1",
    "nest-asyncio>=1.6.0",
    "quart>=0.19.9",
    "hypercorn>=0.17.3",
    "asyncpg",
    "aiohttp",
    "sqlalchemy-utils>=0.41.2",
    "python-telegram-bot==20.7"
]
