
[tool.poetry]
name = "jobseekrbot"
version = "0.1.0"
description = "Job Hunter Bot with AI-powered features"
authors = ["Ofir Hamami admin@hostme.co.il"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
flask-login = "^0.6.3"
flask-sqlalchemy = "^3.1.1"
openai = "^1.57.2"
sqlalchemy = "^2.0.36"
flask-wtf = "^1.2.2"
psycopg2-binary = "^2.9.10"
email-validator = "^2.2.0"
geopy = "^2.4.1"
nest-asyncio = "^1.6.0"
quart = "^0.19.9"
hypercorn = "^0.17.3"
asyncpg = "^0.30.0"
aiohttp = "^3.11.10"
sqlalchemy-utils = "^0.41.2"
python3-saml = "^1.16.0"
requests-oauthlib = "^2.0.0"
certbot = "^3.0.1"
flask-migrate = "^4.0.7"
certbot-dns-cloudflare = "^3.0.1"
python-telegram-bot = "^20.7"
schedule = "^1.2.2"
flask-session = "^0.8.0"
